# 2D-Curve-Design-Tool

./: .gitignore  CMakeLists.txt  README.md
HW1/: .gitignore  CMakeLists.txt
HW1/Sources/: Algorithms.cpp  Curve.cpp  CurveAlgorithms.cpp  Grid.cpp  OGLManager.cpp  Points.cpp  Shader.cpp  main.cpp  mainwindow.cpp  res.qrc
HW1/Sources/Forms/: mainwindow.ui
HW1/Sources/Headers/: Algorithms.h  Curve.h  CurveAlgorithms.h  Grid.h  OGLManager.h  Points.h  Shader.h  mainwindow.h
HW1/Sources/Objects/: Curve.cpp  Grid.cpp
HW1/Sources/Objects/Headers/: Curve.h  Grid.h
HW1/Sources/PythonAPI/: RBFNet.py
HW1/Sources/Resources/Shaders/: curve.frag  curve.vert  grid.frag  point.vert
HW1/Sources/Utils/: Algorithms.cpp
HW1/Sources/Utils/Headers/: Algorithms.h
Sources/: OGLManager.cpp  mainwindow.cpp  res.qrc
Sources/Forms/: mainwindow.ui
Sources/Headers/: OGLManager.h  mainwindow.h
Sources/Objects/: Curve.cpp  Points.cpp
Sources/Objects/Headers/: Curve.h  Points.h
Sources/PythonAPI/: test.ipynb
Sources/Resources/Shaders/: curve.frag  curve.vert  point.frag
Sources/Utils/: Algorithms.cpp  Shader.cpp
Sources/Utils/Headers/: Algorithms.h  Shader.h
debug-mingw-64/: 2D-Curve-Design-Tool.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
debug-mingw-64/.cmake/api/v1/reply/: cache-v2-ce6029687a9cc4dd0fae.json  cmakeFiles-v1-af02cf2d2bb3b3775073.json  codemodel-v2-7d54da51b0b2c8593732.json  index-2023-08-31T11-57-24-0623.json  target-2D-Curve-Design-Tool-Debug-29f5ebe9332fb8eb0ec2.json  target-2D-Curve-Design-Tool_autogen-Debug-fa770f1cf790b3b2c95a.json  toolchains-v1-0d9507b6be96a3f06c0d.json
debug-mingw-64/2D-Curve-Design-Tool_autogen/: mocs_compilation.cpp
debug-mingw-64/2D-Curve-Design-Tool_autogen/7PH6M6IPMC/: moc_gl_renderer.cpp  moc_gl_renderer.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
debug-mingw-64/2D-Curve-Design-Tool_autogen/include/ui/: ui_MainWindow.h
src/: curve_model.cpp  gl_renderer.cpp  grid.cpp  main.cpp  mainwindow.cpp  point.cpp  res.qrc  shader.cpp  util_func.cpp
src/include/: curve_model.h  gl_renderer.h  grid.h  mainwindow.h  point.h  shader.h  util_func.h
src/resources/qss/: flatwhite.css
src/resources/shaders/: curve.frag  curve.vert  grid.frag  grid.vert  point.frag  point.vert
src/ui/: mainwindow.ui
